--- a/.github/workflows/main_laithshop2.yml
+++ b/.github/workflows/main_laithshop2.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy PHP app to Azure Web App - laithshop2
+name: Build and deploy PHP app to Azure Web App - laithShop2
 
 on:
   push:
@@ -61,15 +61,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9E9CCCC525044CE7A2504A2BE83AFFD2 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_955E656263D84F5C8CC9C1F9A9B64917 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_FAC1125002B649FA945FAFFEBE1F33D8 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_CEB91C74F44940008D1A99BB16248139 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_98CB2CE96EC04435B552C1BC015AF894 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5C1A31CB5D3545B6A5D5D8106015A6C7 }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'laithshop2'
+          app-name: 'laithShop2'
           slot-name: 'Production'
           package: .
           
